AMP-17605. Fix the select box overflow
git-svn-id: file:///svn/branches/AMP_2_8_RELEASE@24776 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp.css
@@ -177,7 +177,7 @@ html.chrome .bd_drop{margin-top:15px;}
 /*--rafy--*/
 .right_menu_cont {padding:10px; font-size:11px;word-wrap:break-word;}
 .right_menu_cont ul {margin:0px;padding:0px;}
-.right_menu_cont select, .right_menu_cont input {width: 95px;}
+.right_menu_cont select, .right_menu_cont input {width: 95px; white-space: nowrap; text-overflow:ellipsis;}
 
 .search_label {font-size:10px; color:#7F7F7F;}
 .tbl_spacing {padding-bottom:5px;}
